# heimdall

./: .env.example  .gitignore  Cargo.toml  Dockerfile  GRAPH.md  README.md  docker-compose.yml
src/: config.rs  graph.rs  lib.rs  main.rs
src/db/: create_relationship.rs  get_relationships.rs  mod.rs
src/http/: error.rs  mod.rs
src/http/handlers/: mod.rs  relationship.rs
